--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "knip": "knip",
     "lint": "TIMING=1 eslint src/**/*.ts* --fix",
     "lint:style": "TIMING=1 stylelint **/*.scss",
-    "test": "jest"
+    "test": "jest",
+    "prepublish": "npm run build"
   },
   "sideEffects": false,
   "types": "./dist/index.d.ts",
